<resources>
    <string name="app_name">SysCredential</string>
    <string name="logo">Logo</string>

    <!-- Common -->
    <string name="common_error_message_generic">Ops! An error occurred, try again.</string>
    <string name="common_error_required_field">Input all fields.</string>

    <string name="btn_save">Save</string>
    <string name="btn_cancel">Cancel</string>
    <string name="menu_add">Add new</string>
    <string name="menu_remove">Remove</string>
    <string name="required_field">Required field.</string>
    <string name="saved_successfully">Saved successfully</string>
    <string name="removed_successfully">Removed successfully</string>
    <string name="updated_successfully">Updated successfully</string>
    <string name="search">Search...</string>

    <!-- Bottom Navigation -->
    <string name="menu_profile_bottom_navigation">Profile</string>
    <string name="menu_persons_bottom_navigation">Persons</string>
    <string name="menu_events_bottom_navigation">Events</string>

    <!-- Firebase Messages -->
    <string name="account_not_registered_register_fragment">Account not registered</string>
    <string name="invalid_email_or_password_register_fragment">Invalid email or password</string>

    <!-- Login Fragment -->
    <string name="label_email_login_fragment">Email</string>
    <string name="label_password_login_fragment">Password</string>
    <string name="btn_enter_login_fragment">Enter</string>
    <string name="btn_register_account_login_fragment">Don\'t have an account? Register now</string>
    <string name="btn_forgot_account_login_fragment">I forgot my password</string>

    <!--   Register Fragment -->
    <string name="title_screen_register_fragment">Register</string>
    <string name="label_name_register_fragment">Name</string>
    <string name="label_email_register_fragment">Email</string>
    <string name="label_password_register_fragment">Password</string>
    <string name="label_confirm_password_register_fragment">Confirm Password</string>
    <string name="btn_create_account_register_fragment">Create account</string>
    <string name="btn_login_register_fragment">Have an account? Login</string>
    <string name="message_error_on_register_register_fragment">Error to register profile</string>

    <!-- Forgot Fragment -->
    <string name="title_screen_forgot_fragment">Forgot account</string>
    <string name="text_information_forgot_fragment">Enter your email to given a link \n to forgot your password.</string>
    <string name="label_email_forgot_fragment">Email</string>
    <string name="btn_send_forgot_fragment">Send</string>
    <string name="send_email_success_forgot_fragment">Link sent! Verify your email</string>

    <!-- Profile Fragment -->
    <string name="title_screen_profile_fragment">Profile</string>
    <string name="btn_save_profile_fragment">Save</string>
    <string name="btn_logout_profile_fragment">Logout</string>
    <string name="text_message_camera_denied_profile_fragment">Para que você capture imagens utilizando a câmera precisamos desta permissão. Acesse as configurações e habilite esta opção.</string>
    <string name="text_message_gallery_denied_profile_fragment">Para que você carregue imagens utilizando a galeria precisamos desta permissão. Acesse as configurações e habilite esta opção.</string>
    <string name="text_title_bottom_sheet_profile">Adicionar imagem</string>
    <string name="text_message_bottom_sheet_profile">Escolha uma das opcoes abaixo para adicionar \numa imagem</string>
    <string name="text_button_camera_bottom_sheet_profile">Camera</string>
    <string name="text_button_gallery_bottom_sheet_profile">Galeria</string>

    <!--   Events List Fragment -->
    <string name="title_screen_event_list_fragment">Events</string>
    <string name="today">Today</string>
    <string name="scheduled">Scheduled</string>
    <string name="finished">Finished</string>

    <!--   User List Fragment -->
    <string name="title_screen_user_list_fragment">Users</string>
    <string name="user_status_active_user_list_fragment">Active</string>
    <string name="user_status_inactive_user_list_fragment">Inactive</string>
    <string name="user_status_blocked_user_list_fragment">Blocked</string>
    <string name="user_role_admin_user_list_fragment">Administrator</string>
    <string name="user_role_participant_user_list_fragment">Participant</string>
    <string name="user_role_creditor_user_list_fragment">Creditor</string>

    <!--    Details Event Fragment -->
    <string name="event_location_event_details_fragment">Location</string>
    <string name="event_timeline_event_details_fragment">Timeline</string>
    <string name="confirm_subscribe_event_details_fragment">Confirm Subscribe</string>
    <string name="show_credential_event_details_fragment">Show Credential</string>
    <string name="menu_registration_event_details_fragment">Registration</string>
    <string name="menu_edit_event_details_fragment">Edit</string>
    <string name="subscribe_date_event_details_fragment">Subscribed at: %s</string>
    <string name="registered_date_event_details_fragment">Registered at: %s</string>

    <!--    Event Form Fragment -->
    <string name="label_title">Title</string>
    <string name="label_description">Description</string>
    <string name="label_local">Local</string>
    <string name="label_date">Date</string>
    <string name="label_hour">Hour</string>
    <string name="select_date_event">Select date</string>
    <string name="placeholder_title">Ex.: Sales Convention</string>
    <string name="placeholder_local">Ex.: Events Center</string>

    <!--    User Form Fragment -->
    <string name="title_screen_user_form_fragment">User data</string>
    <string name="label_id_user_form_fragment">ID</string>
    <string name="label_name_user_form_fragment">Name</string>
    <string name="label_email_user_form_fragment">Email</string>
    <string name="label_department_user_form_fragment">Department</string>

    <!--   Registration List Fragment -->
    <string name="volume_up_flash_scan">Volume up to flash on</string>
    <string name="no_events_registered">No events registered</string>
    <string name="no_users_registered">No users registered</string>
    <string name="empty_registrations">Empty registrations</string>
    <string name="add_event_icon">Add event icon</string>
    <string name="cancelled_scan">Cancelled Scan</string>
    <string name="success_scan">Success: %s</string>
    <string name="credential_not_found">Credential %s not found</string>
    <string name="credential_format_not_valid">Credential format not valid</string>
    <string name="registrations">Registrations</string>
    <string name="scan_credential">Scan credential</string>
    <string name="share_menu_registration_list_fragment">Share registration list</string>

</resources>