<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_bottom_sheet"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/text_title_bottom_sheet_profile"
        android:textColor="@color/blue_500" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginVertical="16dp"
        android:background="?actionBarDivider" />

    <TextView
        android:id="@+id/tv_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/text_message_bottom_sheet_profile" />

    <Button
        android:id="@+id/btn_camera"
        style="@style/CustomOutlineButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="@dimen/margin_large"
        android:text="@string/text_button_camera_bottom_sheet_profile" />

    <Button
        android:id="@+id/btn_gallery"
        style="@style/CustomOutlineButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="@dimen/margin_large"
        android:text="@string/text_button_gallery_bottom_sheet_profile" />
</LinearLayout>